--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.4.2",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
     "lenis": "^1.3.16",
+    "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
