--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "glensonansin.github.io",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://glensonansin.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@react-three/fiber": "^9.4.2",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
+    "daisyui": "^5.5.14",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
+    "qss": "^3.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
@@ -33,6 +39,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
